# drf-

./: .gitignore  asgi.py  pyproject.toml  settings.py  urls.py  wsgi.py
DjangoProject/: settings.py
DjangoProject/util/: util_env.py
apis/: common_views.py  urls.py
apis/controllers/: accounts_organization_controller.py  accounts_patient_controller.py
apis/serializers/: accounts_organization_serializers.py  accounts_patient_serializers.py
apis/views/: accounts_organization_views.py  accounts_patient_views.py
domains/accounts/: apps.py
domains/accounts/migrations/: 0001_initial.py  0002_patient.py  0003_alter_patient_patient_uuid_alter_patient_user_id_and_more.py
domains/accounts/models/: __init__.py  accounts_organization_model.py  accounts_organization_patient_model.py  accounts_patient_model.py
domains/accounts/service/: accounts_organization_patient_service.py  accounts_organization_service.py  accounts_patient_service.py
domains/commons/: BaseController.py  BaseService.py  BaseViewSet.py  base_controller.py  base_service.py  base_view_set.py
util/: util.decorator.py  util_decorator.py  util_env.py
